test/tests/stages/7_compound_statements/valid/empty_blocks.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(ten)
  =
  const int(10)
  ;
  {
  }
  int
  identifier(twenty)
  =
  const int(10)
  *
  const int(2)
  ;
  {
  {
  }
  }
  return
  identifier(ten)
  +
  identifier(twenty)
  ;
  }
