test/tests/stages/7_compound_statements/invalid_semantics/extra_credit/different_labels_same_scope.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(label1)
  :
  ;
  int
  identifier(a)
  =
  const int(10)
  ;
  identifier(label2)
  :
  ;
  int
  identifier(a)
  =
  const int(11)
  ;
  return
  const int(1)
  ;
  }
